[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ffmpeg-sidecar = { version = "2.5.0", features = ["download_ffmpeg"] }
iroh = "0.97.0"
iroh-blobs = { version = "0.99.0", features = ["fs-store"] }
rand = "0.8.0"
tokio = {version = "1", features = ["full"]}
willow25 = "0.4.0"
